@@ -1,2 +1,4 @@
 [B]Version 1.1.10[/B]
 fixed: speedporn pagination
+fixed: freepornstreams
+chaturbate - added tags
